hot fixe username spacing

--- a/app/assets/stylesheets/components/greeting.scss
+++ b/app/assets/stylesheets/components/greeting.scss
@@ -63,6 +63,7 @@
   color: white; 
 
   .header-name {
+    margin-right: 10px;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
   
